--- a/report/docuser.tex
+++ b/report/docuser.tex
@@ -25,7 +25,7 @@
 
 %% ** Begin document ** %%
 
-\title{Étude pratique : Amélioration de la complétion automatique de \LaTeX{}ila  : Documentation Technique}
+\title{Étude pratique : Amélioration de la complétion automatique de \LaTeX{}ila  : Documentation Utilisateur}
 \author{Axel Caro\and François Boschet\and Maximilien Richer}
 \date{2014-2015}
 
