DocTech: Remove chapters

--- a/report/documentationTechnique.tex
+++ b/report/documentationTechnique.tex
@@ -15,6 +15,13 @@
 \usepackage{tikz}
 
 \setlength{\parskip}{1em}
+% Random code from stackoverflow refining chapters
+% See http://tex.stackexchange.com/questions/110840/how-to-remove-chapter-numbering-without-removing-it-from-tableofcontents
+\titleformat{\chapter}
+  {\Large\bfseries} % format
+  {}                % label
+  {0pt}             % sep
+  {\huge}         % before-code
 
 
 %% ** Begin document ** %%
